--- a/index.css
+++ b/index.css
@@ -13,7 +13,38 @@ body {
   margin: 0;
   background-color: var(--bg-17);
 }
+.child-svg-squeeze svg{
+  transform: scale(0.8);
+}
 
+.mobile-bottom-drawer{
+  grid-area: Footer;
+  display: hidden;
+
+}
+.TVChartContainer{
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+}
+
+.TVChartContainer-wrapper{
+  width: auto;
+  resize: vertical;
+  height: 60vh;
+}
+
+@media (max-width: 800px)  {
+  .mobile-bottom-drawer{
+    display: flex;
+  }
+  .TVChartContainer-wrapper{
+    width: auto;
+    resize: vertical;
+    height: 50vh;
+  }
+  
+}
 @media (max-width: 800px) and (min-width: 600px) {
   .custom-view {
     display: none;
@@ -2089,12 +2120,7 @@ iframe {
   width: 100%;
   height: 100%;
 }
-@media (max-width: 600px) {
-  iframe {
-    width: 100%;
-    height: 80vh;
-  }
-}
+
 .cross-btn-all {
   padding: 0 !important;
   margin-right: 2px !important;
