--- a/index.css
+++ b/index.css
@@ -22,6 +22,9 @@ body {
   display: hidden;
 
 }
+.drawer__handle-wrapper{
+  background-color: #17171F;
+}
 .TVChartContainer{
   width: 100%;
   height: 100%;
