--- a/index.css
+++ b/index.css
@@ -217,11 +217,11 @@ onUpEnd(c-(idx)
     position: absolute;
     top: 0px;
     right: calc(var(--global-padding) * -1);
-    background: linear-gradient(
+    background:linear-gradient(
       90deg,
-      rgba(2, 0, 36, 0) 0%,
+      rgb(87 86 91 / 0%) 0%,
       rgba(255, 255, 255, 0) 0%,
-      rgba(0, 0, 0, 0.575) 100%
+      rgb(18 18 28 / 57%) 100%
     );
     content: '';
     width: 20px;
