--- a/index.css
+++ b/index.css
@@ -17,6 +17,14 @@ body {
   transform: scale(0.8);
 }
 
+.flexlayout__tab{
+  background: #171722;
+}
+
+.flexlayout__tabset_tabbar_outer{
+  background: #171722;
+}
+
 .mobile-bottom-drawer{
   grid-area: Footer;
   display: hidden;
