--- a/index.css
+++ b/index.css
@@ -17,8 +17,16 @@ body {
   transform: scale(0.8);
 }
 
+.active-tab-tv{
+  background: #5353532e;
+}
+.active-tab-tv .flexlayout__tab_button_trailing{
+  visibility: visible;
+}
+
 .flexlayout__tab_button--selected{
-    background: #353945;
+    background: transparent;
+    color: grey;
 }
 
 html .flip-y{
