--- a/index.css
+++ b/index.css
@@ -2256,6 +2256,7 @@ html .tooltip {
   line-height: 20px;
   border-radius: 10px;
   text-align: center;
+  max-width: 350px;
 }
 
 html .arrow:before {
