--- a/index.css
+++ b/index.css
@@ -79,7 +79,8 @@ html .MuiDialog-container {
 :root {
   --bg-0:#232334;
   --bg-1:#181C27;
-  --bg-2:#171722;
+  --bg-2:#303044;
+  --bg-3:#282B39;
   --text-2:#808191;
   --text-3:#C3C2D4;
   --text-1:#ffffff;
