--- a/index.css
+++ b/index.css
@@ -19,6 +19,9 @@ body {
 .flexlayout__layout{
   margin:0px 5px
 }
+.left-border{
+  border-left-width: 3px;
+}
 
 html .flip-y{
   transform: rotateY(180deg);
