--- a/index.css
+++ b/index.css
@@ -12,6 +12,37 @@ body {
   margin: 0;
   background-color: var(--bg-17);
 }
+.my-node{
+}
+.my-node-enter {
+  transition:  200ms ease-out;
+  max-width:899px;
+
+}
+.my-node-enter-active {
+  max-width: 899px;
+  transform: translateX(0%);
+
+}
+.my-node-exit {
+  transform: translateX(0%);
+  max-width: 899px;
+
+}
+.my-node-exit-active {
+  transform: translateX(-1000%);
+  transition:  200ms ;
+  max-width: 0px;
+}
+.my-node-exit-done {
+  transform: translateX(-1000%);
+  max-width:0px;
+}
+
+  
+/* write close sidebar animation just like open sidebar animation above */
+
+
 .child-svg-squeeze svg{
   transform: scale(0.8);
 }
