--- a/index.css
+++ b/index.css
@@ -12,7 +12,31 @@ body {
   margin: 0;
   background-color: var(--bg-17);
 }
+.rotate-big-animation{
+animation-delay: 3.5s;
+animation-name: rotate-big;
+animation-duration: 1s;
+animation-timing-function: ease-in-out;
+animation-fill-mode: forwards;
+  /* animation: rotate-big 1s ease-in-out forwards; */
+}
+.custom-paper-class{
+  min-width: 100vw;
+  display: grid !important;
+  place-items: center ;
+  align-items: center;
+  height: 100vh;
+}
 
+@keyframes rotate-big {
+  from{
+    transform: scale(1) rotate(0deg);
+  }
+  to{
+    transform: scale(9) rotate(360deg);
+
+  }
+}
 .my-node-enter {
   transition:  200ms;
   max-width:0px;
