--- a/index.css
+++ b/index.css
@@ -163,7 +163,7 @@ html .MuiDialog-container {
 }
 :root {
   --bg-0: #0D0D15;
-  --bg-1:#282B39;
+  --bg-1:#1C1C28;
   --bg-2:#171722;
   --bg-vertical-gradient:linear-gradient(180deg, #000000 43%,var(--bg-1) 93.44%);
   --text-2:#808191;
