--- a/index.css
+++ b/index.css
@@ -724,8 +724,8 @@ html {
   --bg-23-table-row: #0e1014;
   --text-8: #2b2557;
   --text-7: rgb(63, 182, 139);
-  --green: #3DECA7;
-  --red: #D34A4A;
+  --green: #3FB68B;
+  --red: #7F87A7;
   --text-6: #808191;
   --text-1: #ffffff;
   --primary: rgb(55, 114, 255);
