--- a/index.css
+++ b/index.css
@@ -725,7 +725,8 @@ html {
   --text-8: #2b2557;
   --text-7: rgb(63, 182, 139);
   --green: #3FB68B;
-  --red: #7F87A7;
+  --red: #D34A4A;
+  --red-grey:#7F87A7;
   --text-6: #808191;
   --text-1: #ffffff;
   --primary: rgb(55, 114, 255);
@@ -1124,6 +1125,10 @@ html .xxtpr {
 
 html .red {
   color: var(--red);
+}
+
+html .red-grey {
+  color: var(--red-grey);
 }
 
 html .green {
