--- a/index.css
+++ b/index.css
@@ -20,6 +20,10 @@ animation-timing-function: ease-in-out;
 animation-fill-mode: forwards;
   /* animation: rotate-big 1s ease-in-out forwards; */
 }
+.boost-button{
+  background: var(--new, linear-gradient(180deg, #A5FFDC 0%, #8CE1DB 42.93%, #6BB9DA 100%)) !important;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) !important;
+}
 
 
 .loader {
