--- a/index.css
+++ b/index.css
@@ -22,6 +22,15 @@ animation-fill-mode: forwards;
 }
 
 
+.br-jackpot{
+  border-right: 2px solid #393953;
+}
+
+.nb-image{
+  background:url('./JackpotValueSection.png');
+  background-size: 100% 100%;
+}
+
 .loader {
   width: min(10vw,125px);
   /* background: #12131c; */
