--- a/index.css
+++ b/index.css
@@ -30,6 +30,10 @@ animation-fill-mode: forwards;
   background:url('./JackpotValueSection.png');
   background-size: 100% 100%;
 }
+.nb-image-sm{
+  background:url('./JackpotBGSM.png');
+  background-size: 100% 100%;
+}
 
 .loader {
   width: min(10vw,125px);
