--- a/index.css
+++ b/index.css
@@ -21,11 +21,21 @@ animation-fill-mode: forwards;
   /* animation: rotate-big 1s ease-in-out forwards; */
 }
 
-
+.mob-width {
+  width:min(100vw, 500px) !important;
+  min-width:min(100vw, 500px) !important;
+  max-width:min(100vw, 500px) !important;
+}
 .br-jackpot{
   border-right: 2px solid #393953;
 }
+.bccc{
+  border-color: rgb(71 85 105);
+}
 
+.bdddbg{
+  background:rgb(30 41 59);
+}
 .nb-image{
   background:url('/JackpotValueSection.png');
   background-size: 100% 100%;
