--- a/index.css
+++ b/index.css
@@ -519,6 +519,9 @@ div.chart-type-dd {
   width: 0px;
   height: 0px;
 }
+.scrollbar-heavy::-webkit-scrollbar {
+  width: 2px;
+}
 @media (max-width: 800px) {
   .tgp {
     transform: none;
