--- a/index.css
+++ b/index.css
@@ -453,10 +453,10 @@ onUpEnd(c-(idx)
     font-size: 18px !important;
   }
   .img-mob-width{
-    width:clamp(320px, 90%,340px);
+    width:96%;
     /* padding-right: 10px;
     padding-bottom: 4px;; */
-    transform: translateX(-4px);
+    /* transform: translateX(-4px); */
     /* margin:0px; */
   }
 }
