--- a/index.css
+++ b/index.css
@@ -12,6 +12,11 @@ body {
   margin: 0;
   background-color: var(--bg-17);
 }
+.notifbg{
+  background-image: url('/notifbg.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .rotate-big-animation{
 animation-delay: 3.5s;
 animation-name: rotate-big;
