--- a/index.css
+++ b/index.css
@@ -12,6 +12,9 @@ body {
   margin: 0;
   background-color: var(--bg-17);
 }
+.dd-border{
+  border: 1px solid #393e41c7;
+}
 .ddasdf {
   position: absolute;
   top: 0px;
