--- a/index.css
+++ b/index.css
@@ -177,6 +177,23 @@ animation-fill-mode: forwards;
   
 /* write close sidebar animation just like open sidebar animation above */
 
+.chip-styles{
+  background: #2c273a;
+    border: 1px solid #5a3f9b;
+    padding: 4px;
+    border-radius: 10px;
+    color: white;
+    font-weight: 500;
+    font-size: 13px;
+    width:100%;
+    padding:6px 10px;
+    margin-bottom: 7px;
+    /* text-align:center; */
+}
+
+.sdfasd{
+  text-decoration: underline;
+}
 
 .child-svg-squeeze svg{
   transform: scale(0.8);
